--- a/config.json
+++ b/config.json
@@ -9,5 +9,5 @@
     "wsextservice" : "local_mobile",
     "gcmpn": "847204461162",
     "customurlscheme": "moodlemobile",
-    "siteurl": "http://ice.xjtlu.edu.cn/"
+    "siteurl": "http://10.7.0.210"
 }
